Batch, filter added